--- a/index.html
+++ b/index.html
@@ -63,55 +63,15 @@
           d="M0,256L80,229.3C160,203,320,149,480,154.7C640,160,800,224,960,224C1120,224,1280,160,1360,128L1440,96L1440,320L1360,320C1280,320,1120,320,960,320C800,320,640,320,480,320C320,320,160,320,80,320L0,320Z"
         ></path>
       </svg>
-    </div>
-  </div>
 
-   <section id="contact">
-      <div class="container">
-        <div class="row text-center mb-3">
-          <div class="col">
-            <h4><b>Contact Me</b></h4>
-          </div>
-        </div>
-        <div class="row justify-content-center">
-          <div class="col-md-6">
-            <form>
-               <!-- Pemasukan Data -->
-               <script language="Javascript">
-                  var nama = prompt('Siapa nama anda?', 'Masukkan nama anda');
-                  document.writeln('Hai, ' + nama);
-                </script>
-              <div class="mb-3">
-                <label for="name" class="form-label">Nama Lengkap</label>
-                <input type="text" class="form-control" id="name" aria-describedby="name" />
-              </div>
-              <div class="mb-3">
-                <label for="Email" class="form-label">Email</label>
-                <input type="email" class="form-control" id="Email" aria-describedby="email" />
-              </div>
-              <div class="mb-3">
-                <label for="pesan" class="form-label">Pesan</label>
-                <textarea class="form-control" id="pesan" rows="3"></textarea>
-              </div>
-              <button type="submit" class="btn btn-primary">Kirim</button>
-            </form>
-          </div>
-        </div>
-      </div>
-       <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 1440 320">
-        <path
-          fill="#FFFFFF"
-          fill-opacity="1"
-          d="M0,256L80,229.3C160,203,320,149,480,154.7C640,160,800,224,960,224C1120,224,1280,160,1360,128L1440,96L1440,320L1360,320C1280,320,1120,320,960,320C800,320,640,320,480,320C320,320,160,320,80,320L0,320Z"
-        ></path>
-      </svg>
-      </section>
+    </div>
     
 
     <footer class="bg-primary text-white text-center pb-5">
+      <p><b>Contact Me</b></p>
       <p><b> Created With</b> <i class="bi bi-heart-fill text-white"></i> <b>by</b> <a href="https://www.instagram.com/salzkap_/" class="text-white fw-bold">Salsabila Azka P.</a></p>
       <p><i class="bi bi-whatsapp"></i> <a href=" https://api.whatsapp.com/send/?phone=62881024778172&text&app_absent=0" class="text-white fw-bold">My Contact</a></p>
-
+     
     </footer>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script>
 
