--- a/perpustakaan.html
+++ b/perpustakaan.html
@@ -54,8 +54,21 @@
             - Menjadikan perpustakaan sebagai sumber informasi bagi sivitas sekolah dan masyarakat <br>
             - Menjadikan budaya membaca sebagai bagian dari budaya sekolah
           </p>
+          <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 1440 320">
+            <path
+              fill="#FFFFFF"
+              fill-opacity="1"
+              d="M0,256L80,229.3C160,203,320,149,480,154.7C640,160,800,224,960,224C1120,224,1280,160,1360,128L1440,96L1440,320L1360,320C1280,320,1120,320,960,320C800,320,640,320,480,320C320,320,160,320,80,320L0,320Z"
+            ></path>
+          </svg>
         </div>
- 
+        
+        <footer class="bg-primary text-white text-center pb-5 ">
+          <p><i class="bi bi-instagram"></i> <a href="https://instagram.com/smkwikrama?utm_medium=copy_link" class="text-white fw-bold">SMK Wikrama Bogor</a></p>
+         
+          <p> <i class="bi bi-house-fill"></i> <b>Jl. Raya Wangun Kelurahan Sindangsari Bogor Timur 16720</b></p>
+          <p><i class="bi bi-telephone-fill"></i> <b>0251-8242411 /</b>  <i class="bi bi-whatsapp"></i><a href=" https://api.whatsapp.com/send/?phone=6282221718035&text&app_absent=0" class="text-white fw-bold"> Whatsapp</a></p>
+        </footer>
       <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script>
       </body>
       </html>
